--- a/dags/dbt/sales/dbt_project.yml
+++ b/dags/dbt/sales/dbt_project.yml
@@ -32,9 +32,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   sales:
     # Config indicated by + and applies to all files under models/example/
-    stagging:
+    staging:
       +materialized: view
-      +schema: stagging
+      +schema: staging
     
     intermidate:
       +materialized: view
